--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
         "guzzlehttp/guzzle": "^7.4",
-        "twilio/sdk": "^7.0"
+        "twilio/sdk": "^7.0",
+        "messagebird/php-rest-api": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
